# SoftwareDefinedRadio

./: .gitignore  CLAUDE.md  README.md  basic_parts.md  design.md  sdr_design_document.md  sdr_transceiver_software_specification.md
.github/workflows/: ci.yml  docs.yml  security.yml
custom_lib/footprint/: CONN-TH_2001S-6P.kicad_mod  DO-35_BD2.0-L4.0-P8.00-D0.5-FD.kicad_mod  HC-49US_L11.5-W4.5-P4.88.kicad_mod  L0805.kicad_mod  LQFP-64_L10.0-W10.0-P0.50-LS12.0-BL.kicad_mod  LQFP-64_L10.0-W10.0-P0.50-LS12.0-TL.kicad_mod  MSOP-10_L3.0-W3.0-P0.50-LS5.0-BL.kicad_mod  QFN-29_L4.0-W4.0-P0.40-TL-BQ25792RQMR.kicad_mod  QFN-38_L6.0-W4.0-P0.40-TL-EP_RJK.kicad_mod  R1206.kicad_mod  SMA-TH_SMA-KE-P902.kicad_mod  SOIC-16_L9.9-W3.9-P1.27-LS6.0-BL.kicad_mod  SOIC-8_L4.9-W3.9-P1.27-LS6.0-BL.kicad_mod  SOIC-8_L5.0-W4.0-P1.27-LS6.0-BL.kicad_mod  SOIC-8_L5.3-W5.3-P1.27-LS8.0-BL.kicad_mod  SOT-223-3_L6.5-W3.4-P2.30-LS7.0-BR.kicad_mod  SOT-23-3_L2.9-W1.3-P1.90-LS2.4-BR.kicad_mod  SOT-23-6_L2.9-W1.6-P0.95-LS2.8-BL.kicad_mod  USB-C-SMD_TYPE-C-6PIN-2MD-073.kicad_mod
custom_lib/footprint/packages3d/: CONN-TH_2001S-6P.step  DO-35_BD2.0-L4.0-P8.00-D0.5-FD.step  SMA-TH_SMA-KE-P902.step
custom_lib/symbol/: 1206W4F1303T5E.kicad_sym  1N5711.kicad_sym  2001S-6P_K.kicad_sym  2N7002.kicad_sym  AMS1117-3_3.kicad_sym  BQ25798RQMR.kicad_sym  FST3253MX.kicad_sym  FT4232HL-Reel.kicad_sym  LM358DR2G.kicad_sym  OP07CDR.kicad_sym  SDFL2012S100KTF.kicad_sym  SI5351A-B-GT.kicad_sym  SMA-KE-P902.kicad_sym  STM32G474RET6.kicad_sym  TPS25750DRJKR.kicad_sym  TYPE-C_16PIN_2MD(073).kicad_sym  USBLC6-2SC6.kicad_sym  W25Q128JVSIQTR.kicad_sym  X49SD8MSB2SI.kicad_sym  XL1509-5_0E1.kicad_sym
firmware/: Cargo.toml  build.rs  deny.toml  memory.x
firmware/.cargo/: config.toml
firmware/src/: config.rs  drivers.rs  dsp.rs  hal.rs  lib.rs  main.rs  power.rs  protocol.rs  radio.rs  types.rs  ui.rs  usb.rs
firmware/src/drivers/: display.rs  encoder.rs  si5351.rs
firmware/src/dsp/: agc.rs  audio_chain.rs  filter.rs  filter_design.rs  modulation.rs  noise_reduction.rs  oscillator.rs  si5351_calc.rs  spectrum.rs
firmware/src/hal/: adc.rs  dac.rs  gpio.rs  i2c.rs  pwm.rs  timer.rs
firmware/src/radio/: keyer.rs  state.rs  transmit.rs  vfo.rs
firmware/src/usb/: cdc.rs
firmware/tests/: agc_tests.rs  buffer_tests.rs  config_tests.rs  dsp_tests.rs  encoder_tests.rs  modulation_tests.rs  oscillator_tests.rs  power_tests.rs  protocol_tests.rs  radio_tests.rs  types_tests.rs
kicad_lib/: __init__.py  result.py
kicad_lib/builders/: __init__.py  symbol_builder.py
kicad_lib/io/: __init__.py
kicad_lib/parser/: __init__.py  schematic_parser.py  sexpr.py  symbol_parser.py
kicad_lib/types/: __init__.py  enums.py  primitives.py  schematic.py  symbol.py
kicad_lib/validation/: __init__.py  erc.py
kicad_lib/writer/: __init__.py  sexpr_writer.py  symbol_writer.py
sdr_frontend/: Cargo.toml
sdr_frontend/crates/sdr-dsp-core/: Cargo.toml
sdr_frontend/crates/sdr-dsp-core/src/: agc.rs  filter.rs  lib.rs  oscillator.rs  spectrum.rs  types.rs
sdr_frontend/crates/sdr-dsp-wasm/: Cargo.toml
sdr_frontend/crates/sdr-dsp-wasm/src/: lib.rs
sdr_frontend/crates/sdr-mode-psk31/: Cargo.toml
sdr_frontend/crates/sdr-mode-psk31/src/: decoder.rs  encoder.rs  lib.rs  varicode.rs
sdr_frontend/crates/sdr-ui/: Cargo.toml
sdr_frontend/crates/sdr-ui/src/: app.rs  audio.rs  components.rs  lib.rs  main.rs  serial.rs  state.rs
sdr_frontend/crates/sdr-ui/src/components/: frequency_display.rs  mode_selector.rs  rx_text.rs  s_meter.rs  tx_input.rs  waterfall.rs
sdr_frontend/web/: index.html
sdr_frontend/worklet/: processor.js
sdr_kicad/: README.md  clock_si5351.kicad_sch  clock_si5351.kicad_sch.bak2  debug_ft4232.kicad_sch  fp-lib-table  mcu_stm32g4.kicad_sch  mcu_stm32g4.kicad_sch.bak2  power_management.kicad_sch  rf_section.kicad_sch  rf_section_yaml.kicad_sch  sdr_transceiver.kicad_pro  sdr_transceiver.kicad_sch  sym-lib-table  test_clock.kicad_sch  usb_connectors.kicad_sch
