[package]
name = "sdr-firmware"
version = "0.1.0"
edition = "2021"
authors = ["SDR Project Team"]
description = "Embedded firmware for STM32G474-based SDR transceiver"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sdr-project/sdr-firmware"
keywords = ["embedded", "sdr", "radio", "stm32", "ham-radio"]
categories = ["embedded", "no-std"]

[lib]
name = "sdr_firmware"
path = "src/lib.rs"

[[bin]]
name = "sdr-radio"
path = "src/main.rs"
required-features = ["embedded"]

[dependencies]
# Async runtime - Embassy (only for embedded)
embassy-executor = { version = "0.7", features = ["arch-cortex-m", "executor-thread", "defmt"], optional = true }
embassy-time = { version = "0.4", features = ["defmt", "defmt-timestamp-uptime"], optional = true }
embassy-stm32 = { version = "0.2", features = [
    "stm32g474re",
    "time-driver-any",
    "memory-x",
    "exti",
    "unstable-pac",
], optional = true }
embassy-usb = { version = "0.4", features = ["defmt"], optional = true }
embassy-sync = { version = "0.7", features = ["defmt"], optional = true }
embassy-futures = { version = "0.1", optional = true }

# HAL and embedded traits (only for embedded)
embedded-hal = { version = "1.0", optional = true }
embedded-hal-async = { version = "1.0", optional = true }
embedded-io = { version = "0.6", optional = true }
embedded-io-async = { version = "0.6", optional = true }

# DSP - Fixed-point and math
micromath = "2.1"
fixed = "1.28"

# Display (only for embedded)
ssd1306 = { version = "0.9", optional = true }
embedded-graphics = { version = "0.8", optional = true }
embedded-graphics-core = { version = "0.4", optional = true }

# Utilities
heapless = { version = "0.8", features = ["defmt-03"] }
static_cell = { version = "2.1", optional = true }
critical-section = { version = "1.2", optional = true }

# Logging and debugging (only for embedded)
defmt = { version = "0.3", optional = true }
defmt-rtt = { version = "0.4", optional = true }
panic-probe = { version = "0.3", features = ["print-defmt"], optional = true }

# Cortex-M support (only for embedded)
cortex-m = { version = "0.7", features = ["critical-section-single-core", "inline-asm"], optional = true }
cortex-m-rt = { version = "0.7", optional = true }

[dev-dependencies]
defmt-test = "0.3"

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = 's'
overflow-checks = false

[profile.dev]
debug = 2
opt-level = 1

# Faster builds for dependencies
[profile.dev.package."*"]
opt-level = 2

[features]
default = ["embedded"]
# Enable embedded/no_std mode with all hardware support
embedded = [
    "dep:embassy-executor",
    "dep:embassy-time",
    "dep:embassy-stm32",
    "dep:embassy-usb",
    "dep:embassy-sync",
    "dep:embassy-futures",
    "dep:embedded-hal",
    "dep:embedded-hal-async",
    "dep:embedded-io",
    "dep:embedded-io-async",
    "dep:ssd1306",
    "dep:embedded-graphics",
    "dep:embedded-graphics-core",
    "dep:static_cell",
    "dep:critical-section",
    "dep:defmt",
    "dep:defmt-rtt",
    "dep:panic-probe",
    "dep:cortex-m",
    "dep:cortex-m-rt",
]
# Enable USB Power Delivery support (requires X-CUBE-TCPP)
usb-pd = []
# Enable std for host testing (disables embedded dependencies)
std = []

# Allow tests to build with std
[[test]]
name = "dsp_tests"
path = "tests/dsp_tests.rs"
required-features = ["std"]

[[test]]
name = "types_tests"
path = "tests/types_tests.rs"
required-features = ["std"]

[[test]]
name = "oscillator_tests"
path = "tests/oscillator_tests.rs"
required-features = ["std"]

[[test]]
name = "agc_tests"
path = "tests/agc_tests.rs"
required-features = ["std"]

[[test]]
name = "modulation_tests"
path = "tests/modulation_tests.rs"
required-features = ["std"]

[[test]]
name = "protocol_tests"
path = "tests/protocol_tests.rs"
required-features = ["std"]

[[test]]
name = "radio_tests"
path = "tests/radio_tests.rs"
required-features = ["std"]
